@@ -13,14 +13,14 @@ HOSTS:
       - master
       - client
     platform: el-6-x86_64
-    box: elastic/oel-6-x86_64
+    box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
 
   oel7:
     roles:
       - client
     platform: el-7-x86_64
-    box: elastic/oel-7-x86_64
+    box: onyxpoint/oel-7-x86_64
     hypervisor: <%= hypervisor %>
 
 CONFIG:
